Fix overflow value

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     opacity: 0;
     transition: opacity 0.7s ease-in-out;
     background-color: #030711;
+    overflow: hidden;
   }
 
   body.fade-in {
